@@ -47,7 +47,6 @@ namespace zmq
         virtual void get_data (unsigned char **data_, size_t *size_,
             int *offset_ = NULL) = 0;
 
-        virtual bool has_data () = 0;
     };
 
 }
