@@ -63,7 +63,6 @@ zmq::stream_engine_t::stream_engine_t (fd_t fd_, const options_t &options_, cons
     options (options_),
     endpoint (endpoint_),
     plugged (false),
-    terminating (false),
     socket (NULL)
 {
     //  Put the socket into non-blocking mode.
@@ -173,11 +172,6 @@ void zmq::stream_engine_t::unplug ()
 
 void zmq::stream_engine_t::terminate ()
 {
-    if (!terminating && encoder && encoder->has_data ()) {
-        //  Give io_thread a chance to send in the buffer
-        terminating = true;
-        return;
-    }
     unplug ();
     delete this;
 }
@@ -279,8 +273,6 @@ void zmq::stream_engine_t::out_event ()
     //  this is necessary to prevent losing incomming messages.
     if (nbytes == -1) {
         reset_pollout (handle);
-        if (unlikely (terminating))
-            terminate ();
         return;
     }
 
@@ -292,10 +284,6 @@ void zmq::stream_engine_t::out_event ()
     if (unlikely (handshaking))
         if (outsize == 0)
             reset_pollout (handle);
-
-    if (unlikely (terminating))
-        if (outsize == 0)
-            terminate ();
 }
 
 void zmq::stream_engine_t::activate_out ()
