@@ -135,7 +135,6 @@ namespace zmq
         std::string endpoint;
 
         bool plugged;
-        bool terminating;
 
         // Socket
         zmq::socket_base_t *socket;
