@@ -1,3 +1,11 @@
+0MQ version 3.2.5 stable, released on 2014/10/14
+================================================
+
+* LIBZMQ-39  Assertion failure "Bad file descriptor" during shutdown (rare)
+* LIBZMQ-576 Crash closing a socket after zmq_msg_send returns EAGAIN (reverts LIBZMQ-497)
+* Fixed issue #1002: rare divide-by zero error when sending message.
+
+
 0MQ version 3.2.4 stable, released on 2013/09/20
 ================================================
 
